--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
 }
 
 .submitBtn {
-	border: 2px solid green;
+	border: 3px solid green;
 	margin: 5px;
 	margin-top: 15px;
 	font-size: 16px;
@@ -17,10 +17,12 @@
 }
 
 .cardType {
-	border: 1px solid;
+	border: 2px solid;
 	padding: 1px;
 	display: inline-block;
 	font-weight: bold;
+	font-family: serif;
+	margin-bottom: 5px;
 }
 
 .block {
