--- a/styles/style.css
+++ b/styles/style.css
@@ -11,10 +11,13 @@
 	border: 2px solid;
 	padding: 10px;
 	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .formHolder {
 	display: inline-block;
+	margin: 10px;
 }
 
 .submitBtn {
