--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,18 @@
 #output {
-    width: 100%;
-    overflow-wrap: break-word;
+	width: 100%;
+	overflow-wrap: break-word;
+}
+
+.index-header {
+	margin-bottom: 0px;
 }
 
 .inactive {
-    visibility: hidden;
+	visibility: hidden;
 }
 
 .secured-fields-form {
-    width: 350px;
+	width: 350px;
 }
 
 .checkout {
@@ -58,108 +62,108 @@ body {
 	font-family: "Open sans", sans-serif;
 }
 
-/* Input field CSS styling */
+/* From Secured Fields */
 .payment-div {
-    margin: 0 auto;
-    width: 60%;
+	margin: 0 auto;
+	width: 60%;
 }
 
 .input-container {
-    float: left;
-    margin-top: 8px;
-    position: relative;
-    width: 100%;
+	float: left;
+	margin-top: 8px;
+	position: relative;
+	width: 100%;
 }
 
 .input-field {
-    border: 1px solid #dedede;
-    border-radius: 2px;
-    float: left;
-    height: 30px;
-    padding: 0 0 0 6px;
-    margin-top: 6px;
-    position: relative;
-    width: 300px;
+	border: 1px solid #dedede;
+	border-radius: 2px;
+	float: left;
+	height: 30px;
+	padding: 0 0 0 6px;
+	margin-top: 6px;
+	position: relative;
+	width: 300px;
 }
 
 .input-label {
-    float: left;
-    font-family: Arial, sans-serif;
-    font-weight: bold;
-    position: relative;
-    width: 100%;
+	float: left;
+	font-family: Arial, sans-serif;
+	font-weight: bold;
+	position: relative;
+	width: 100%;
 }
 
 .custom-field {
-    float: left;
-    position: relative;
-    width: 300px;
+	float: left;
+	position: relative;
+	width: 300px;
 }
 
 
 .button--pay {
-    color: #fff;
-    background-color: #0abf53;
-    border-radius: 2px;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border: none;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    height: 40px;
-    padding-top: 2px;
-    margin-top: 20px;
-    width: 310px;
+	color: #fff;
+	background-color: #0abf53;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	border: none;
+	font-family: Arial, sans-serif;
+	font-size: 16px;
+	height: 40px;
+	padding-top: 2px;
+	margin-top: 20px;
+	width: 310px;
 }
 
 .button--pay.disabled {
-    pointer-events: none;
-    opacity: .5;
+	pointer-events: none;
+	opacity: .5;
 }
 
 .brand-container__image {
-    width: 40px;
+	width: 40px;
 }
 
-/* Page styling */
+/* From Checkout SDK */
 .content {
-    float: left;
-    position: relative;
-    width: 100%;
+	float: left;
+	position: relative;
+	width: 100%;
 }
 
 .explanation {
-    margin: 20px auto 0;
-    position: relative;
-    width: 60%;
+	margin: 20px auto 0;
+	position: relative;
+	width: 60%;
 }
 
 .checkout-container {
-    float: left;
-    margin: 0 auto;
-    position: relative;
-    width: 100%;
+	float: left;
+	margin: 0 auto;
+	position: relative;
+	width: 100%;
 }
 
 .form-div {
-    margin: 0 auto;
-    position: relative;
-    width: 60%;
+	margin: 0 auto;
+	position: relative;
+	width: 60%;
 }
 
 .payment-div {
-    float: left;
-    position: relative;
-    width: 100%;
+	float: left;
+	position: relative;
+	width: 100%;
 }
 
 
 @media (max-width: 520px) {
-    .explanation {
-        width: 100%;
-    }
+	.explanation {
+		width: 100%;
+	}
 
-    .form-div {
-        width: 100%;
-    }
+	.form-div {
+		width: 100%;
+	}
 }
