--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,10 @@
 	overflow-wrap: break-word;
 }
 
+.inputHolder {
+	text-align: right;
+}
+
 .index-header {
 	margin-bottom: 0px;
 }
@@ -38,11 +42,17 @@
 }
 
 .submitBtn {
-	border: 3px solid green;
-	margin: 5px;
+	margin-bottom: 5px;
 	margin-top: 15px;
+
+	border: 4px solid green;
+	border-radius: 15px;
+	background-color: green;
+	color: white;
+	
 	font-size: 16px;
 	font-weight: bold;
+	letter-spacing: 1px;
 }
 
 .cardType {
@@ -56,6 +66,12 @@
 
 .block {
 	display: block;
+}
+
+.center {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 body {
