--- a/styles/style.css
+++ b/styles/style.css
@@ -45,9 +45,9 @@
 	margin-bottom: 5px;
 	margin-top: 15px;
 
-	border: 4px solid green;
+	border: 4px solid #3C8A2E;
 	border-radius: 15px;
-	background-color: green;
+	background-color: #3C8A2E;
 	color: white;
 	
 	font-size: 16px;
