--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@
 
 .clientForm {
 	border: 2px solid;
+	border-radius: 3px;
 	padding: 10px;
 	display: inline-block;
 	margin-left: auto;
@@ -76,6 +77,7 @@
 
 body {
 	font-family: "Open sans", sans-serif;
+	padding: 20px;
 }
 
 /* From Secured Fields */
