--- a/styles/flowchart.css
+++ b/styles/flowchart.css
@@ -1,5 +1,7 @@
 /* It's supposed to look like a tree diagram */
 /* unashamedly stolen from https://codepen.io/ross-angus/pen/jwxMjL */
+
+/* node highlighting */
 .active-state {
     background-color: #98F098;
 }
@@ -12,6 +14,20 @@
     background-color: #A69490;
 }
 
+/* opaque background to cover extraneous text */
+div.flowchart-background {
+    background-color: white;
+    width: 50%;
+    position: fixed;
+    top: 0px;
+    left: 50%;
+}
+
+figure.flowchart {
+    top: 20px;
+}
+
+/* tree structure */
 .tree, .tree ul, .tree li {
     list-style: none;
     margin: 0;
@@ -57,7 +73,9 @@
         }
         /* If the tree represents DOM structure */
         .tree code {
-            font-family: monaco, Consolas, 'Lucida Console', monospace;
+            font-family:  'Lucida Console', monospace;
+            font-size: 15px;
+            font-weight: lighter;
         }
 
             /* | */
