--- a/styles/style.css
+++ b/styles/style.css
@@ -79,7 +79,7 @@ button, .submitBtn {
 	letter-spacing: 1px;
 }
 
-button.disabled {
+button:disabled {
 	background-color: #989898;
 	border: 4px solid #989898;
 }
