--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,107 @@
+/* general styling */
+body {
+	font-family: "Open sans", sans-serif;
+	-webkit-font-smoothing: auto;
+	padding: 20px;
+}
+
+body.dark {
+	background-color: #222222;
+	color: #D3D3D3;
+}
+
+.block {
+	display: block;
+}
+
+.center {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.challenge-iframe {
+	background-color: #DDD;
+}
+
+/* output section */
 #output {
 	width: 100%;
 	overflow-wrap: break-word;
+
+	background-color: #222222;
+}
+
+.output-item {
+	font-weight: 400;
+	font-family: monospace;
+
+	background-color: #343434;
+	color: #B1BCD2;
+	margin-bottom: 15px;
+	padding: 10px;
+}
+
+.output-title {
+	color: #C5AF75;
+}
+
+.output-subtitle {
+	color: #A8B487;
+}
+
+.output-main-body {
+	font-size: 1em;
+	overflow: auto;
+}
+
+.output-main-body::-webkit-scrollbar {
+	width: 0;
+}
+
+/* form styling */
+.clientForm {
+	border: 2px solid;
+	border-radius: 3px;
+	padding: 10px;
+	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.clientForm input[type=text] {
+	float: right;
+}
+
+.clientForm label {
+	float: center;
+	margin-right: 5px;
+}
+
+form.dark input[type=text] {
+	border: 1px solid white;
 }
 
 label {
 	user-select: none;
+}
+
+button, .submitBtn {
+	margin-bottom: 5px;
+	margin-top: 15px;
+
+	border: 4px solid #08AB49;
+	border-radius: 3px;
+	background-color: #08AB49;
+	color: white;
+	
+	font-size: 16px;
+	letter-spacing: 1px;
+}
+
+button:disabled {
+	background-color: #989898;
+	border: 4px solid #989898;
 }
 
 .inputHolder {
@@ -23,6 +120,12 @@ label {
 	width: 350px;
 }
 
+.formHolder {
+	display: inline-block;
+	margin: 10px;
+}
+
+/* checkout page */
 .checkout-iframe {
 	border: 1px black dashed;
 	width: 80%;
@@ -51,39 +154,6 @@ label {
 	color: #0083BF !important;
 }
 
-.clientForm {
-	border: 2px solid;
-	border-radius: 3px;
-	padding: 10px;
-	display: inline-block;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.formHolder {
-	display: inline-block;
-	margin: 10px;
-}
-
-button, .submitBtn {
-	margin-bottom: 5px;
-	margin-top: 15px;
-
-	border: 4px solid #3C8A2E;
-	border-radius: 15px;
-	background-color: #3C8A2E;
-	color: white;
-	
-	font-size: 16px;
-	font-weight: bold;
-	letter-spacing: 1px;
-}
-
-button:disabled {
-	background-color: #989898;
-	border: 4px solid #989898;
-}
-
 .cardType {
 	border: 2px solid;
 	padding: 1px;
@@ -91,21 +161,6 @@ button:disabled {
 	font-weight: bold;
 	font-family: serif;
 	margin-bottom: 5px;
-}
-
-.block {
-	display: block;
-}
-
-.center {
-	display: block;
-	margin-right: auto;
-	margin-left: auto;
-}
-
-body {
-	font-family: "Open sans", sans-serif;
-	padding: 20px;
 }
 
 /* From Secured Fields */
