--- a/styles/style.css
+++ b/styles/style.css
@@ -20,8 +20,18 @@ body.dark {
 	margin-left: auto;
 }
 
+.inactive, .hidden {
+	visibility: hidden;
+}
+
+.display-none {
+	display: none;
+}
+
 .challenge-iframe {
-	background-color: #DDD;
+	display: block;
+	margin-left: 200px;
+	margin-top: 200px;
 }
 
 /* output section */
@@ -37,8 +47,7 @@ body.dark {
 	margin-bottom: 15px;
 	padding: 10px;
 
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
+	background-color: #EEE;
 }
 
 .output-summary {
@@ -99,7 +108,7 @@ body.dark .output-main-body {
 	margin-right: 5px;
 }
 
-form.dark input[type=text] {
+body.dark input[type=text] {
 	border: 1px solid white;
 }
 
@@ -131,14 +140,6 @@ button:disabled {
 
 .index-header {
 	margin-bottom: 0px;
-}
-
-.inactive, .hidden {
-	visibility: hidden;
-}
-
-.display-none {
-	display: none;
 }
 
 .secured-fields-form {
