update 3ds2 basic flow

--- a/styles/flowchart.css
+++ b/styles/flowchart.css
@@ -13,6 +13,7 @@ figure.flowchart {
 
 /* legend */
 .flowchart-legend {
+    margin-top: -30px;
     position: relative;
     display: flex;
     align-items: center;
