--- a/styles/style.css
+++ b/styles/style.css
@@ -214,7 +214,9 @@ body.dark .right-column {
 }
 
 .challenge-iframe {
-
+	border: 2px black solid;
+	width: 400px;
+	padding: 10px;
 }
 
   /*****************/
